Issue #34. Set mobile menu z-index to 100.

--- a/src/resources/assets/sass/layout/nav.sass
+++ b/src/resources/assets/sass/layout/nav.sass
@@ -88,7 +88,7 @@ $mobileNavLeft: $mobileNavWidth + 10px
         align-items: flex-end
         width: $mobileNavWidth
         height: 100%
-        z-index: 10
+        z-index: 100
         border-bottom: 0
         padding: 50px 0 0
         +card(1)
